# $Id$

2006-09-17	Konstantin V. Arkhipov

	* 0.6.2 released.

2006-09-14	Konstantin V. Arkhipov

	* core/OSQL/SelectQuery.class.php: arrayGet() now detects two
	DialectString childs in should-be-prefixed cases, as requested by
	Sherman.

2006-09-10	Konstantin V. Arkhipov

	* main/Flow/RedirectToView.class.php: {get,set}Suffix added.

2006-09-08	Dmitry E. Demidov

	* main/Utils/TuringTest/CodeGenerator.class.php: added restriction
	generation of similar symbols ability.

2006-09-07	Dmitry E. Demidov

	* core/Form/Form.class.php: addCustomLabel() added.

2006-08-23	Konstantin V. Arkhipov

	* core/Cache/PeclMemcached.class.php: corrected behaviour in cases
	when memcached's gone.

2006-08-22	Dmitry E. Demidov

	* main/Utils/HttpStatus.class.php: added enumeration of http status
	codes.

	* main/Utils/HeaderUtils.class.php: changed method sendHttpStatus to
	use introduced enumeration..

2006-08-21	Dmitry E. Demidov

	* main/Utils/HeaderUtils.class.php: added method sendHttpStatus.

2006-08-18	Konstantin V. Arkhipov

	* main/Containers/Storable/StorableContainer.class.php: fixed issue
	with lost keys in getIdsList(). Spotted by serge, approved by antony.

2006-08-15	Dmitry E. Demidov

	* core/Form/Primitives/PrimitiveTernary.class.php: ternary primitive 
	can be required

2006-08-11	Konstantin V. Arkhipov

	* core/Cache/SemaphorePool.class.php: now trying to detect and use
	eAccelerator's locking when sysvsem extension is missing.

	* main/DAOs/Handlers/ApcSegmentHandler.class.php: integration with APC
	too.

	* main/DAOs/Handlers/eAcceleratorSegmentHandler.class.php,
	core/Cache/eAcceleratorLocker.class.php: integration with
	eAccelerator.

2006-08-10	Konstantin V. Arkhipov

	* core/Form/FormUtils.class.php: checkPrototyped() added.

	* 0.6.1 released.

2006-08-08	Konstantin V. Arkhipov

	* core/DB/, ext/: 'abstract static' methods are now just 'abstract' to
	be compatible with upcoming php-5.2, wrt to php's bug #38219.

2006-08-08	Dmitry E. Demidov
