@@ -18,7 +18,8 @@
 
 <!ELEMENT identifier EMPTY>
 <!ATTLIST identifier
-		name	CDATA #REQUIRED
+		name	CDATA #IMPLIED
+		type	CDATA #IMPLIED
 >
 
 <!ELEMENT property EMPTY>
